# datagokr

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py.bak  setup_helpers.py
datagokr/: DataGoKr.py  scripts.py
datagokr/airkorea/: ArpltnInforInqireSvc.py  __init__.py
datagokr/kma/: AsosHourlyInfoService.py  VilageFcstInfoService_2_0.py  __init__.py  info.py
datagokr/utils/: __init__.py  convert.py
