[metadata]
name = datagokr
description = Get data from data.go.kr
long_description = file: README.metadata
author = Woojin Cho
author_email = woojin.cho@gmail.com

[options]
packages = find:
install_requires = 
    pendulum
    pydantic
    requests
    urllib3
include_package_data = True

[options.entry_points]
console_scripts =
    # main = mypkg:some_func